--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,9 +1,9 @@
-$color__primary: #000;
-$color__secondary: #000;
-$color__tertiary: #000;
-$color__gray: #000;
+$color__primary: #566f6b;
+$color__secondary: #8bbeb7;
+$color__tertiary: #162d27;
+$color__gray: #b4bdba;
 $color__dark: #000;
-$color__light: #000;
+$color__light: #fff;
 
 $unit__tiny: 0.4rem;
 $unit__small: 0.8rem;
