--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,8 @@
 @import "./abstracts/variables";
 @import "./base/reset";
 @import "./base/typography";
+@import "./base/general";
+@import "./layout/header";
+@import "./layout/navbar";
+@import "./components/logo";
+@import "./components/links";
