--- a/sass/components/_links.scss
+++ b/sass/components/_links.scss
@@ -39,7 +39,13 @@
   }
 }
 
-.hero-cta-link {
+.wolf-link {
+  padding: $unit__normal $unit__medium;
+  border-radius: 25px;
+  border: 2px solid #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+  display: inline-block;
   &:link,
   &:visited {
     color: $color__primary;
@@ -50,7 +56,7 @@
   &:hover,
   &:active {
     color: $color__light;
-    background: $color__secondary;
-    border: 2px solid $color__secondary;
+    background: $color__dark;
+    border: 2px solid $color__light;
   }
 }
