coded 'products' and 'testimonials' section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,5 @@
 @import "./components/links";
 @import "./layout/hero";
 @import "./pages/home";
+@import "./components/sectionTitle";
+@import "./components/testimonial";
