--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,5 @@
 @import "./pages/home";
 @import "./components/sectionTitle";
 @import "./components/testimonial";
+@import "./components/footer";
+@import "./components/attribution";
